@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- This script was automatically generated using Zero G's InstallAnywhere 6.0 Enterprise, Build 2262
      STATUS: Fully Functional LICENSED Edition
-     DATE:   Thu Feb 12 15:40:53 PST 2004 -->
-<InstallAnywhere_Deployment_Project increments="3447">
+     DATE:   Tue Feb 17 15:55:56 PST 2004 -->
+<InstallAnywhere_Deployment_Project increments="3581">
 	<!-- ** DO NOT EDIT ** Essential authorization and configuration data ** DO NOT EDIT ** -->
 	<essentialScriptInfo>
 		<versionID major="6" minor="0" revision="-1"/>
@@ -10,9 +10,9 @@
 		<scriptID>12,42,11,90,81,52,54,53,54,68,86,83,81,54,80,74</scriptID>
 		<buildID>3,13,71,87,105,110,100,111,119,115,32,88,80,44,32,53,46,49,44,32,120,56,54,59,32,74,97,118,97,32,49,46,51,46,49,95,48,56,44,32,83,117,110,32,77,105,99,114,111,115,121,115,116,101,109,115,32,73,110,99,46,44,32,104,116,116,112,58,47,47,106,97,118,97,46,115,117,110,46,99,111,109,47,59,32,101,110,44,32,85,83,59,32,67,112,49,50,53,50</buildID>
 		<!-- The authorizationID may change between project saves and builds.  This does not effect the integrity of the project, nor do changes in this value represent changes in the actual InstallAnywhere project. -->
-		<authorizationID>1,0,0,-16,-93,30,-96,-64,80,112,116,103,88,98,113,97,113,65,65,88,74,65,72,71,70,69,64,69,66,69,48,79,87,5,2,6,11,90,108,10,0,0,0</authorizationID>
+		<authorizationID>1,0,0,-16,-61,-17,48,-16,80,112,116,103,88,98,113,97,113,65,65,88,74,65,72,71,70,69,64,69,66,69,48,79,87,5,2,2,14,88,101,10,0,0,0</authorizationID>
 	</essentialScriptInfo>
-	<installationObjects uniqueObjects="175">
+	<installationObjects uniqueObjects="190">
 		<object class="com.zerog.ia.installer.Installer" objectID="e14b381f9883">
 			<property name="wizardME">
 				<object class="com.zerog.ia.installer.actions.MakeExecutable" objectID="e14b435a989f">
@@ -179,7 +179,7 @@ it will search for ones in this list]]></string>
 								</object>
 							</method>
 							<method name="addElement">
-								<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="bf9badc3be49">
+								<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9661337bf36">
 									<property name="propertyValue">
 										<string><![CDATA[com.gallery.GalleryRemote.GalleryRemote]]></string>
 									</property>
@@ -263,7 +263,7 @@ and any path to a file to read from that file]]></string>
 								<string><![CDATA[GalleryRemote.jar]]></string>
 							</property>
 							<property name="fileSize">
-								<long>531993</long>
+								<long>532681</long>
 							</property>
 							<property name="macBinary">
 								<boolean>false</boolean>
@@ -1637,7 +1637,7 @@ If the commands above do not work, you should download and install these package
 				<object class="java.util.Properties">
 					<method name="put">
 						<string><![CDATA[com.zerog.ia.project.save.last.date]]></string>
-						<string><![CDATA[February 12, 2004 3:40:52 PM PST]]></string>
+						<string><![CDATA[February 17, 2004 3:55:55 PM PST]]></string>
 					</method>
 					<method name="put">
 						<string><![CDATA[com.zerog.ia.build.options.optimization.platform.merge]]></string>
@@ -1685,7 +1685,7 @@ If the commands above do not work, you should download and install these package
 					</method>
 					<method name="put">
 						<string><![CDATA[com.zerog.ia.project.build.last.date]]></string>
-						<string><![CDATA[February 11, 2004 11:08:03 AM PST]]></string>
+						<string><![CDATA[February 17, 2004 3:53:06 PM PST]]></string>
 					</method>
 					<method name="put">
 						<string><![CDATA[com.zerog.ia.installer.options.heap.size.initial]]></string>
@@ -1900,7 +1900,7 @@ If the commands above do not work, you should download and install these package
 						<int>3</int>
 					</property>
 					<property name="productVersionRevision">
-						<int>1</int>
+						<int>2</int>
 					</property>
 					<property name="productVersionSubRevision">
 						<int>0</int>
@@ -2427,7 +2427,7 @@ and any path to a file to read from that file]]></string>
 												<string><![CDATA[ChangeLog]]></string>
 											</property>
 											<property name="fileSize">
-												<long>30154</long>
+												<long>31509</long>
 											</property>
 											<property name="macBinary">
 												<boolean>false</boolean>
@@ -2966,7 +2966,7 @@ and any path to a file to read from that file]]></string>
 												<string><![CDATA[gallery-remote.faq.html]]></string>
 											</property>
 											<property name="fileSize">
-												<long>7904</long>
+												<long>7922</long>
 											</property>
 											<property name="macBinary">
 												<boolean>false</boolean>
@@ -3111,7 +3111,7 @@ and any path to a file to read from that file]]></string>
 												<string><![CDATA[gallery-remote.software.html]]></string>
 											</property>
 											<property name="fileSize">
-												<long>5544</long>
+												<long>5825</long>
 											</property>
 											<property name="macBinary">
 												<boolean>false</boolean>
@@ -3140,7 +3140,7 @@ and any path to a file to read from that file]]></string>
 												<string><![CDATA[gallery-remote.using.html]]></string>
 											</property>
 											<property name="fileSize">
-												<long>10742</long>
+												<long>10760</long>
 											</property>
 											<property name="macBinary">
 												<boolean>false</boolean>
@@ -3396,6 +3396,230 @@ and any path to a file to read from that file]]></string>
 												<object refID="a66afc659337"/>
 												<object refID="a66afc669337"/>
 											</visualChildren>
+										</object>
+										<object class="com.zerog.ia.installer.actions.MakeExecutable" objectID="d9665466bf8c">
+											<property name="unixPermissions">
+												<string><![CDATA[777]]></string>
+											</property>
+											<property name="overrideUnixPermissions">
+												<boolean>false</boolean>
+											</property>
+											<property name="guiLauncher">
+												<boolean>true</boolean>
+											</property>
+											<property name="propertyList">
+												<object class="java.util.Vector">
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9667387bf96">
+															<property name="propertyValue">
+																<string><![CDATA[console]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.stderr.redirect]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[leave blank for no input, "console" to read from the console window,
+and any path to a file to read from that file]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665466bf90">
+															<property name="propertyValue">
+																<string><![CDATA[true]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[apple.laf.useScreenMenuBar]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[Integrate with Mac menu bar]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665475bf91">
+															<property name="propertyValue">
+																<string><![CDATA[2750]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.nl.win32.microsoftvm.min.version]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[The minimum version of Microsoft's VM this application will run against]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665466bf91">
+															<property name="propertyValue">
+																<string><![CDATA[]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.stdin.redirect]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[leave blank for no input, "console" to read from the console window,
+and any path to a file to read from that file]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665467bf90">
+															<property name="propertyValue">
+																<string><![CDATA[.]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.user.dir]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[left blank, this property will cause the native launcher to not
+alter the platform default behavior for setting the user dir.
+To override this you may set this property to a relative or absolute path.
+Relative paths are relative to the launcher.]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665466bf8d">
+															<property name="propertyValue">
+																<string><![CDATA[main]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.main.method]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[the method in the main class that will be invoked]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665466bf8f">
+															<property name="propertyValue">
+																<string><![CDATA[$USER_INSTALL_DIR$]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.root.install.dir]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[path to the installdir magic folder]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665475bf92">
+															<property name="propertyValue">
+																<string><![CDATA[$CMD_LINE_ARGUMENTS$]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.command.line.args]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[what will be passed to the main method -- be sure to quote arguments with spaces in them]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665466bf8e">
+															<property name="propertyValue">
+																<string><![CDATA[$IA_CLASSPATH$]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.class.path]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[the Java classpath necessary to run this application
+Can be separated by colons (Mac OS/Unix) or semicolons (Windows)]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665476bf91">
+															<property name="propertyValue">
+																<string><![CDATA[J2]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.nl.valid.vm.list]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[a string containing one or more of [ ALL JDK JRE J1 J2 JRE_J1 JDK_J1 JRE_J2 JDK_J2 MSJ MRJ ]
+ delimited by spaces or commas.  If the native launcher cannot find the current vm,
+it will search for ones in this list]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665467bf8e">
+															<property name="propertyValue">
+																<string><![CDATA[5.0]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.version]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[version of LaunchAnywhere that created this properties file]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9665467bf8d">
+															<property name="propertyValue">
+																<string><![CDATA[com.gallery.GalleryRemote.GalleryRemote]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.main.class]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[the class that contains the main method for the application]]></string>
+															</property>
+														</object>
+													</method>
+													<method name="addElement">
+														<object class="com.zerog.ia.installer.util.LAXPropertyData" objectID="d9667386bf9a">
+															<property name="propertyValue">
+																<string><![CDATA[console]]></string>
+															</property>
+															<property name="propertyName">
+																<string><![CDATA[lax.stdout.redirect]]></string>
+															</property>
+															<property name="propertyComment">
+																<string><![CDATA[leave blank for no input, "console" to read from the console window,
+and any path to a file to read from that file]]></string>
+															</property>
+														</object>
+													</method>
+												</object>
+											</property>
+											<property name="shouldUninstall">
+												<boolean>true</boolean>
+											</property>
+											<property name="destinationName">
+												<string><![CDATA[Gallery Remote Debug]]></string>
+											</property>
+											<property name="executableIcon">
+												<object class="com.zerog.ia.installer.util.BindingWin32" objectID="d9665475bf93">
+													<property name="smallIconName">
+														<string><![CDATA[rar_icon_16.gif]]></string>
+													</property>
+													<property name="largeIconName">
+														<string><![CDATA[rar_icon_32.gif]]></string>
+													</property>
+													<property name="smallIconPath">
+														<string><![CDATA[$IA_PROJECT_DIR$\]]></string>
+													</property>
+													<property name="largeIconPath">
+														<string><![CDATA[$IA_PROJECT_DIR$\]]></string>
+													</property>
+													<property name="macOSXIconPath">
+														<string><![CDATA[$IA_PROJECT_DIR$\]]></string>
+													</property>
+													<property name="macOSXIconName">
+														<string><![CDATA[rar_icon_128_gr1.icns]]></string>
+													</property>
+												</object>
+											</property>
+											<property name="mainClass">
+												<string><![CDATA[com.gallery.GalleryRemote.GalleryRemote]]></string>
+											</property>
 										</object>
 									</installChildren>
 								</object>
@@ -4735,6 +4959,7 @@ and any path to a file to read from that file]]></string>
 					<visualChildren>
 						<object refID="e14b387d9899"/>
 						<object refID="e14b435a989f"/>
+						<object refID="d9665466bf8c"/>
 						<object refID="e14cdef998a4"/>
 						<object refID="e14cdef998a5"/>
 						<object refID="e14cdefa98a5"/>
