@@ -1,3 +1,13 @@
+2004-02-17  Pierre-Luc Paour <gallery@paour.com> (1.3.2-b1)
+
+	* Albums are now sorted alphabetically when using the latest
+	  protocol.
+	* Added a new launcher in the IA project for debug, which
+	  sets the output to a console.
+	* When IA console is set, the Log will automatically be sent
+	  to stdout. This is to make it easier to have users send
+	  in bug reports that include exceptions.
+
 2004-02-12  Pierre-Luc Paour <gallery@paour.com> (1.3.1)
 
 	* Re-release...
